--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,3 @@
-remote_theme: pages-themes/minimal@v0.2.0
+theme: jekyll-theme-minimal
 title: BLE Data Exfiltration for RT
 description: Exfiltrate data from laptop via BLE
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
