--- a/BluetoothLE_Server/cs/BluetoothLE.csproj
+++ b/BluetoothLE_Server/cs/BluetoothLE.csproj
@@ -10,6 +10,8 @@
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>x86|x64</AppxBundlePlatforms>
     <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
+    <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+    <PackageCertificateKeyFile>BluetoothLE_TemporaryKey.pfx</PackageCertificateKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -144,6 +146,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="BluetoothLE_TemporaryKey.pfx" />
     <None Include="TestSigningSCRA.pfx" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
